# pkms

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  NEXT.md  PRODUCT.md  README.md  pyproject.toml
.impeccable/: config.json
bakeoff/: PKMS-Bakeoff-Results-2026-07-04.md
docs/: PKMS-Lever-T-Thinking-Compression-Plan-2026-07-03.md  PKMS-Price-Performance-Bakeoff-Plan-2026-07-03.md  delegation-roadmap.md  email-discord-setup.md  firefox-newtab-setup.md  keep-setup.md  kenja-gates.md  pixel-capture-setup.md  pixel-pwa-setup.md  publication-safety.md  s1-notifications-decision-gates.md
exports/: phase2-reading-bundle.html  phase2-reading-bundle.md
scripts/: build_public_mirror.py  build_reading_bundle.py  check_publication_safety.py  ocr_spotcheck.py  pkms-capture.ahk  register-keep-pull.ps1
spike/: PIXEL-CAPTURE-TEST.md  README.md  capture_server.py  check_index.py
tests/: __init__.py  conftest.py  test_area_tiles.py  test_bakeoff_bundle.py  test_bakeoff_i3.py  test_capture.py  test_capture_service.py  test_cli.py  test_daily.py  test_db.py  test_discord_capture.py  test_email_ingest.py  test_f1_search_raw_cli.py  test_f2_task_paused_wake_field.py  test_f3_search_empty_query_guard.py  test_frontend_pipeline_plan.py  test_indexer.py  test_keep_ingest.py  test_keep_ingest_db_durability.py  test_keep_ingest_ledger_durability.py  test_line_endings.py  test_linker.py  test_linker_orphans.py  test_ocr.py  test_promote.py  test_publication_safety.py  test_recognition_cards.py  test_resurface.py  test_search.py  test_search_operators_literal.py  test_tasks.py  (+10 more)
(+127 files in other folders)
