[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkms"
version = "0.1.0"
description = "Personal Knowledge Management System"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-frontmatter>=1.1",
    "watchdog>=4",
    "gkeepapi>=0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "Pillow",
]

[project.scripts]
pkms = "pkms.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
